:+1: update-score-app

--- a/SCORE-APP/index.html
+++ b/SCORE-APP/index.html
@@ -26,7 +26,7 @@
    </div>
    <div class="Arsenal">
        <img src="Arsenal.png" id="Arsen">
-       <h2>Arsenal The Gunners</h2>
+       <h2>Arsenal The Gunners</h2><br><br>
        <p>0</p>
        <button type="button">GOAL</button>
        <P>0</P>
