:art: update.winner.gif

--- a/SCORE-APP/index.html
+++ b/SCORE-APP/index.html
@@ -9,10 +9,14 @@
     
 </head>
 <body>
+    <div class="winner">
+        <img src="winner.gif" id="winner1">
+       </div>
     <header>
         <h1>Score-keeper-app</h1>
     </header>
    <div class="container">
+      
    <div class="Manchester">
        <img src="Man U.png" id="Manu">
        <h2>Mancherster United</h2>
