:art: update.array.js

--- a/SCORE-APP/index.html
+++ b/SCORE-APP/index.html
@@ -9,8 +9,8 @@
     
 </head>
 <body>
-    <div class="winner">
-        <img src="winner.gif" id="winner1">
+    <div  id="winner1">
+        <img src="winner.gif" click="winner">
        </div>
     <header>
         <h1>Score-keeper-app</h1>
