:art:update.palindrome.js

--- a/SCORE-APP/index.html
+++ b/SCORE-APP/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <div  id="winner1">
+    <div  class="winner1">
         <img src="winner.gif" click="winner">
        </div>
     <header>
