--- a/SCORE-APP/index.html
+++ b/SCORE-APP/index.html
@@ -9,9 +9,12 @@
     
 </head>
 <body>
-    <div  class="winner1">
-        <img src="winner.gif" click="winner">
-       </div>
+    <!-- <div  id="container">
+        <div id="animate">
+            <img src="winner.gif" alt="">
+        </div>
+        
+       </div> -->
     <header>
         <h1>Score-keeper-app</h1>
     </header>
