:art:updatetodolist.js

--- a/SCORE-APP/index.html
+++ b/SCORE-APP/index.html
@@ -17,6 +17,7 @@
        </div> -->
     <header>
         <h1>Score-keeper-app</h1>
+        <p4 id="countdown"></p>
     </header>
    <div class="container">
       
@@ -24,7 +25,7 @@
        <img src="Man U.png" id="Manu">
        <h2>Mancherster United</h2>
        <p id="goal1">0</p>
-       <button onclick="GoalM()">GOAL</button>
+       <button onclick="GoalM()">GOAL</button> 
        <P id="foul1">0</P>
        <button onclick="FoulM()">FOUL</button>
    </div>
