:art:update.todo.js

--- a/TO-DO-LIST/to-do.html
+++ b/TO-DO-LIST/to-do.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="to-do.css">
 </head>
 <body>
+    <!-- <h1>The Window Object</h1>
+<h2>The matchMedia() Method</h2> -->
+
+<p id="demo"></p>
     <div class="container">
         <div id="header">
         <h2>Loty To-do-list</h2>
